@@ -1,3 +1,8 @@
+2006-06-02  Hans Rakers <hans at parse dot nl>
+	* Removed two unused vars from the internal datastructures
+	* Fixed constructor inheritance. This fixes handling of implicit
+	  constructors and solves ticket #89
+
 2006-05-14  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
 
         * Forgot to remove some debug messages for the filter bug.
